--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Brud RPG - Surrealistyczna Przygoda z Kontekstem</title>
 <style>
   body {
-    font-family: 'Comic Sans MS', cursive;
+    font-family: 'Arial', cursive;
     background-color: #f0f0f0;
     color: #333;
     padding: 20px;
