--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </style>
 </head>
 <body>
-<h1 style="font-family: 'Papyrus', fantasy; text-shadow: 2px 2px 4px #8B4513;">Brud-rpg. Przygotuj się do szalonej gry bez kontekstu</h1>
+<h1 style="font-family: 'Arial', fantasy; text-shadow: 2px 2px 4px #8B4513;">Brud-rpg. Przygotuj się do szalonej gry bez kontekstu</h1>
 <div id="character-selection">
   <style>
     #character-selection {
