--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@ function generateResponse(action) {
   }
 
   // Dodanie losowego elementu surrealistycznego
+  // PIES
   const surrealistyczneDodatki = [
     "Nagle, wszystkie kolory zaczynają się mieszać jak w kalejdoskopie. ",
     "Grawitacja na chwilę przestaje działać, a wszystko zaczyna unosić się w powietrzu. ",
