--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ function generateResponse(action) {
   }
 
   // Dodanie losowego elementu surrealistycznego
-  // PIES
+  // PIES, TEST2
   const surrealistyczneDodatki = [
     "Nagle, wszystkie kolory zaczynają się mieszać jak w kalejdoskopie. ",
     "Grawitacja na chwilę przestaje działać, a wszystko zaczyna unosić się w powietrzu. ",
