--- a/index.html
+++ b/index.html
@@ -401,7 +401,14 @@ const scenarios = [
     location: "Miejsce spotkania z gąbkami",
     items: [],
     characters: ["mówiące gąbki"]
+  },
+  {
+    text: "Spotykasz cały squad zespołu honor. Czy zejdziesz z obranej drogi?",
+    location: "Zaczarowany las",
+    items: [],
+    characters: ["Honor"]
   }
+
 ];
 
 function addToStory(text, className = '') {
